--- a/frontend/src/app/modules/main/driver-ride-details/driver-ride-details.component.html
+++ b/frontend/src/app/modules/main/driver-ride-details/driver-ride-details.component.html
@@ -60,7 +60,7 @@ sm:h-full select-none" id="order-menu">
 
     <!-- driver info -->
     <h1 class="text-2xl font-bold text-gray-50 mt-10">Your passengers</h1>
-    <div *ngIf="ride.passengers" class="flex flex-col mt-4 max-h-72 overflow-auto">
+    <div *ngIf="ride.passengers" class="flex flex-col gap-y-2 mt-4 max-h-72 overflow-auto">
       <div *ngFor="let passenger of ride.passengers">
         <div class="flex w-full justify-between">
           
