--- a/frontend/src/app/modules/main/modals/ride-complete/ride-complete/ride-complete.component.html
+++ b/frontend/src/app/modules/main/modals/ride-complete/ride-complete/ride-complete.component.html
@@ -32,7 +32,8 @@
 </div>
 
 <div *ngIf="showReviewModal">
-  <app-ride-review-modal [ride]="ride">
-
+  <app-ride-review-modal
+  [rideId]="ride?.id"
+  (reviewSent)="onReviewSent()">
   </app-ride-review-modal>
 </div>
