--- a/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
@@ -63,7 +63,7 @@
             class="flex gap-x-3 px-3 py-1.5 rounded-lg w-full hover:text-gray-300"
             routerLink="/passenger/ride-history"
           >
-            <fa-icon [icon]="faRoute" class="text-xl w-6"></fa-icon>
+            <fa-icon [icon]="faRoute" class="text-xl"></fa-icon>
             <span class="my-auto">Ride history</span>
           </button>
 
@@ -71,7 +71,7 @@
             class="flex gap-x-3 px-3 py-1.5 rounded-lg w-full hover:text-gray-300"
             routerLink="/passenger/fav-routes"
           >
-            <fa-icon [icon]="faStar" class="text-xl w-6"></fa-icon>
+            <fa-icon [icon]="faStar" class="text-xl"></fa-icon>
             <span class="my-auto">Favourite routes</span>
           </button>
         </div>
@@ -80,7 +80,7 @@
             class="flex gap-x-3 px-3 py-1.5 rounded-lg w-full hover:text-gray-300"
             routerLink="/drivers/ride-history"
           >
-            <fa-icon [icon]="faRoute" class="text-xl w-6"></fa-icon>
+            <fa-icon [icon]="faRoute" class="text-xl"></fa-icon>
             <span class="my-auto">Ride history</span>
           </button>
         </div>
