--- a/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
@@ -144,7 +144,7 @@
         class="flex flex-col justify-center text-center text-xl w-10 h-10 my-auto rounded-full cursor-pointer hover:text-light shadow-sm"
       >
         <img
-          src="/assets/images/placeholders/taxi-driver.jpg"
+          [src]="userImage ? userImage : '/assets/images/placeholders/default.png'"
           alt=""
           class="w-11 h-11 rounded-full"
         />
