--- a/frontend/src/app/modules/admin/users-search/users-search.component.html
+++ b/frontend/src/app/modules/admin/users-search/users-search.component.html
@@ -129,17 +129,23 @@
             <img *ngIf="user.userImage"
               [src]="user.userImage"
               class="h-10 w-10 rounded-full"
+              [ngClass]="type === 'DRIVER' ? 'cursor-pointer' : ''"
               alt="No Profile Pic"
+              [routerLink]="type === 'DRIVER' ? '/driver/' + user.username : null"
             />
             <div *ngIf="!user.userImage" class="h-10 w-10 rounded-full border-2 border-stone-500">
               
             </div>
           </div>
           <div class="min-w-0 flex-1">
-            <p class="truncate font-medium text-gray-50 text-lg">
+            <p class="truncate font-medium text-gray-50 text-lg"
+            [ngClass]="type === 'DRIVER' ? 'cursor-pointer' : ''"
+            [routerLink]="type === 'DRIVER' ? '/driver/' + user.username : null">
               {{ user.name }} {{ user.surname }}
             </p>
-            <p class="truncate text-sm text-light font-medium">
+            <p class="truncate text-sm text-light font-medium"
+            [ngClass]="type === 'DRIVER' ? 'cursor-pointer' : ''"
+            [routerLink]="type === 'DRIVER' ? '/driver/' + user.username : null">
               {{ user.username }}
             </p>
           </div>
